--- a/src/main/resources/static/css/book.css
+++ b/src/main/resources/static/css/book.css
@@ -6,21 +6,87 @@ body {
 	font-size: 15px;
 }
 
-
-.star-ratings-sprite {
-background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
-font-size: 0;
-height: 21px;
-line-height: 0;
-overflow: hidden;
-text-indent: -999em;
-width: 110px;
-margin: 0 auto;
+table{
+	width:70%;
+	border-collapse: separate;
+	border-spacing: 0;
 }
-.star-ratings-sprite-rating {
-background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2605/star-rating-sprite.png") repeat-x;
-background-position: 0 100%;
-float: left;
-height: 21px;
-display: block;
+table td{
+	height: 50px;
+}
+
+.submit form{
+	display: inline-block;
+	margin: 0 10px;
+}
+
+#button{
+	display: inline-block;
+	border-radius: 5%;
+	font-size: 15px;
+	cursor: pointer;
+	padding: 10px 18px;
+	background:rgba(153, 153, 153, 0.59);
+	color: black;
+	line-height: 1em;
+	transtion: .3s;
+	border: 2px solid rgba(153, 153, 153, 0.59);
+}
+
+.button{
+	display: inline-block;
+	padding: 16px 24px;
+	text-decoration: none;
+	border: 1px;
+	background:#9999cc;
+	color: white;
+	box-shadow: 0px 2px 4px #575;
+}
+table th:first-child{
+  border-radius: 5px 0 0 0;
+}
+
+table tr:hover{
+  background-color: #d4f0fd;
+}
+
+
+
+table th:last-child{
+  border-radius: 0 5px 0 0;
+  border-right: 1px solid #3c6690;
+}
+
+table th{
+  text-align: center;
+  color:white;
+  background: linear-gradient(#99ffcc,#52c2d0);
+  border-left: 1px solid #3c6690;
+  border-top: 1px solid #3c6690;
+  border-bottom: 1px solid #3c6690;
+  box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+  width: 25%;
+  padding: 10px 0;
+}
+
+table td{
+  text-align: center;
+  border-left: 1px solid #a8b7c5;
+  border-bottom: 1px solid #a8b7c5;
+  border-top:none;
+  box-shadow: 0px -3px 5px 1px #eee inset;
+  width: 25%;
+  padding: 10px 0;
+}
+
+table td:last-child{
+  border-right: 1px solid #a8b7c5;
+}
+
+table tr:last-child td:first-child {
+  border-radius: 0 0 0 5px;
+}
+
+table tr:last-child td:last-child {
+  border-radius: 0 0 5px 0;
 }
