--- a/src/main/resources/static/css/useFlashcard.css
+++ b/src/main/resources/static/css/useFlashcard.css
@@ -7,28 +7,37 @@ body {
 }
 
 
+
 #questionText {
 	display:inline-block;
 	 padding: 0.5em 0em;
     margin: 2em 0;
     color: #232323;
     background: rgb(220, 220, 224);
-    border-left: solid 70px rgb(0, 128, 255);
+    border-left: solid 50px rgb(0, 128, 255);
 }
 
-#answer {
-
-	 padding: 0.5em;
+#answer{
+	 display:inline-block;
+	 padding: 0.5em 0em;
     margin: 2em 0;
     color: #232323;
     background: rgb(220, 220, 224);
-    border-left: solid 70px rgb(0, 128, 255);
+    border-left: solid 50px rgb(0, 128, 255)
 }
 
 #explanation{
-	 padding: 0.5em 3em;
+	 display:inline-block;
+	 padding: 0.5em 0em;
     margin: 2em 0;
     color: #232323;
     background: rgb(220, 220, 224);
-    border-left: solid 70px rgb(0, 128, 255);
+    border-left: solid 50px rgb(0, 128, 255);
+}
+
+
+
+
+#next{
+	text-decoration:none;
 }
