--- a/src/main/resources/templates/incorrectTest.html
+++ b/src/main/resources/templates/incorrectTest.html
@@ -3,24 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <title>過去問</title>
-<link href="/css/test.css" rel="stylesheet">
+<link href="/css/incorrectTest.css" rel="stylesheet">
 </head>
 <body>
 	<span th:replace="menu"></span>
 
-	<hr>
+
 	<h1>過去に間違えたことのある問題</h1>
 
 	<br>
 	<div th:text="${none}"></div>
 
-	<table border="1" align="center">
+	<table align="center">
 		<tr th:each="test:${tests}">
-			<td th:text="${test.code}"></td>
+			<td id="code" th:text="問題 +${test.code}"></td>
 			<form action="/incorrect/detail" method="post">
 				<input type="hidden" name="test_code" th:value="${test.code}">
-				<td th:text="${test.question}"></td>
-			<td><input type="submit" value="詳細"></td>
+				<td id="question" th:text="${test.question}"></td>
+			<td><input type="submit" id="detail" value="詳細"></td>
 			</form>
 		</tr>
 
