--- a/src/main/resources/static/css/addBook.css
+++ b/src/main/resources/static/css/addBook.css
@@ -1,7 +1,10 @@
 @charset "UTF-8";
 body {
+	margin:0;
 	text-align: center;
-	background: #f0fff0;
+	background:#f0fff0;
+	font-size:15px;
+
 }
 
 input.star{
