--- a/src/main/resources/static/css/comment.css
+++ b/src/main/resources/static/css/comment.css
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 
 body{
-	text-align:center;
+	margin:0;
+	text-align: center;
 	background:#f0fff0;
+	font-size:15px;
+
 }
 table{
 	border-collapse: collapse;
