--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -65,7 +65,7 @@
         </a>
         <ul class="sub-menu">
          <li><a href="/profile">登録情報の参照・変更</a></li>
-         <li><a href="logout">ログアウト</a></li>
+         <li><a href="/logout">ログアウト</a></li>
         </ul>
       </li>
     </ul>
