--- a/src/main/resources/static/css/addFlashcard.css
+++ b/src/main/resources/static/css/addFlashcard.css
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 
 body {
+	margin:0;
 	text-align: center;
-	background: #f0fff0
+	background:#f0fff0;
+	font-size:15px;
+
 }
 
 #question {
