--- a/src/main/resources/static/css/flashcard.css
+++ b/src/main/resources/static/css/flashcard.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 
 body {
+	margin:0;
 	text-align: center;
-	background: #f0fff0;
-	font-size: 15px;
+	background:#f0fff0;
+	font-size:15px;
+
 }
 
 .url {
@@ -12,7 +14,7 @@ body {
 }
 
 .url::after {
-	border-bottom: solid 2px #8b008b;
+	border-bottom: solid 2px rgb(128, 128, 255);
 	bottom: 0;
 	content: "";
 	display: block;
