--- a/src/main/resources/static/css/updateProfile.css
+++ b/src/main/resources/static/css/updateProfile.css
@@ -1,9 +1,12 @@
 @charset "UTF-8";
 
 body {
+	margin:0;
 	text-align: center;
-	background: #f0fff0;
-	font-size: 15px
+	background:#f0fff0;
+	font-size:15px;
+
 }
+
 
 
