--- a/src/main/resources/static/css/useTest.css
+++ b/src/main/resources/static/css/useTest.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
 
 body {
+	margin:0;
 	text-align: center;
-	background: #f0fff0
+	background:#f0fff0;
+	font-size:15px;
+
 }
+
 
 .questions {
 	background: rgb(137, 192, 254);
