--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -10,8 +10,8 @@
 
 
 <h1>過去問題集</h1>
-<a href="/test/use">過去問を解く</a>
+<a href="/test/use" class="test">過去問を解く</a>
 <br>
-<a href="/test/incorrect">過去に間違えた問題を確認する</a>
+<a href="/test/incorrect" class="test">過去に間違えた問題を確認する</a>
 </body>
 </html>
