--- a/src/main/resources/templates/comment.html
+++ b/src/main/resources/templates/comment.html
@@ -26,6 +26,23 @@
 <br><br>
 <form action="/comment/add" method="post">
 <textarea name="comment" placeholder="レビュー内容を入力"></textarea>
+<br><br>
+<span id="hoshi"> 5点満点で星評価を選択してください。</span>
+<div class="cont">
+<div class="stars">
+  <input class="star star-5" id="star-5" type="radio" name="star" value="5"/>
+  <label class="star star-5" for="star-5"></label>
+  <input class="star star-4" id="star-4" type="radio" name="star" value="4"/>
+  <label class="star star-4" for="star-4"></label>
+  <input class="star star-3" id="star-3" type="radio" name="star" value="3"/>
+  <label class="star star-3" for="star-3"></label>
+  <input class="star star-2" id="star-2" type="radio" name="star" value="2"/>
+  <label class="star star-2" for="star-2"></label>
+  <input class="star star-1" id="star-1" type="radio" name="star" value="1"/>
+  <label class="star star-1" for="star-1"></label>
+</div>
+</div>
+<br><br><br><br>
 <input class="button" type="submit" value="投稿">
 </form>
 <br>
