--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,21 +16,25 @@
 </div>
 <br><br>
 
+<ul>
+<li>
+<a href="/flashcard" id="flashcard"><img src="/img/flashcard_color.png"></a>
+</li>
 
-<a href="/flashcard" id="flashcard">フラッシュカード</a>
+<li>
+<a href="/test" id="test"><img src="/img/test.png"></a>
+</li>
+
+<li>
+<a href="/tweet" id="tweet"><img src="/img/tweet.png"></a>
+</li>
 
 
-<a href="/test" id="test">過去問</a>
+<li>
+<a href="/book" id="book_color"><img src="/img/book.png"></a>
+</li>
 
-
-<a href="/tweet" id="tweet">掲示板</a>
-
-
-
-
-<a href="/book" id="book">おすすめの参考書</a>
-
-
+</ul>
 
 
 </body>
