--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -31,6 +31,7 @@
   <label class="star star-2" for="star-2"></label>
   <input class="star star-1" id="star-1" type="radio" name="star" value="1"/>
   <label class="star star-1" for="star-1"></label>
+  <input class="star" type="radio" name="star" value="none" style="display:none" checked>
 </div>
 </div>
 <br>
