--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,26 +16,26 @@
 </div>
 <br><br>
 
-<ul>
-<li>
+<div class="main">
 <a href="/flashcard" id="flashcard"><img src="/img/flashcard_color.png"></a>
-</li>
+<p class="text">フラッシュカード</p>
 
-<li>
+</div>
+
+<div class="main">
 <a href="/test" id="test"><img src="/img/test.png"></a>
-</li>
+<p class="text">過去問</p>
+</div>
 
-<li>
+
+<div class="main">
 <a href="/tweet" id="tweet"><img src="/img/tweet.png"></a>
-</li>
+<p class="text">掲示板</p>
+</div>
 
-
-<li>
+<div class="main">
 <a href="/book" id="book_color"><img src="/img/book.png"></a>
-</li>
-
-</ul>
-
-
+<p class="text">おすすめの参考書</p>
+</div>
 </body>
 </html>
