--- a/src/main/resources/templates/useTest.html
+++ b/src/main/resources/templates/useTest.html
@@ -34,7 +34,7 @@
 
 <p><div th:text="${correct}"></div></p>
 
-<input type="submit" value="解答">
+<input type="submit" class="button" value="解答">
 <br>
 <div id="answer" th:text="${answer}"></div>
 <br>
