--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -16,12 +16,28 @@ h1 {
 	border: 1px #f3e6ff solid;
 }
 
-li {
+.main {
+	margin-left: auto;
+	margin-right: auto;
+	padding: 30px 20px 0px 30px;
 	list-style: none;
-	display: inline;
+	float: left;
 }
 
 img {
 	width: 300px;
 	height: 300px;
+}
+
+.text{
+    padding: 8px 19px;
+    margin: 2em 0;
+    color: #2c2c2f;
+    background: #cde4ff;
+    border-top: solid 5px #5989cf;
+    border-bottom: solid 5px #5989cf;
+}
+.text p {
+    margin: 0;
+    padding: 0;
 }
