--- a/src/main/resources/static/css/useFlashcard.css
+++ b/src/main/resources/static/css/useFlashcard.css
@@ -43,3 +43,17 @@ body {
 #next{
 	text-decoration:none;
 }
+
+.button{
+	background-color:rgb(157, 211, 255);
+  position: relative;
+  display: inline-block;
+  padding: 8px 17px;
+  cursor: pointer;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  border-radius: 0.5rem;
+}
