--- a/src/main/resources/templates/incorrectDetail.html
+++ b/src/main/resources/templates/incorrectDetail.html
@@ -22,9 +22,9 @@
 選択肢
 <br>
 <div class="change">
-<span th:text="${option_a}"></span>
-<span th:text="${option_b}"></span>
-<span th:text="${option_c}"></span>
+<span th:text="${option_a}"></span><br>
+<span th:text="${option_b}"></span><br>
+<span th:text="${option_c}"></span><br>
 <span th:text="${option_d}"></span>
 </div>
 </div>
