--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <link href="/css/login.css" rel="stylesheet">
 </head>
 <body>
-<h3>IPA 資格取得情報アプリ</h3>
+<h3>FE 資格取得情報アプリ</h3>
 <div>
 <form action="/login" method="post">
 
