--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -12,8 +12,8 @@ body {
 }
 
 h1 {
-	background-color: #fff;
-	border: 1px #f3e6ff solid;
+	font-size:40px;
+
 }
 
 .main {
@@ -30,14 +30,18 @@ img {
 }
 
 .text{
-    padding: 8px 19px;
-    margin: 2em 0;
+    margin:0;
     color: #2c2c2f;
     background: #cde4ff;
     border-top: solid 5px #5989cf;
     border-bottom: solid 5px #5989cf;
+
+}
+
+a{
+	text-decoration:none;
 }
 .text p {
     margin: 0;
-    padding: 0;
+    padding-bottom: 20px;
 }
