--- a/src/main/resources/templates/addFlashcard.html
+++ b/src/main/resources/templates/addFlashcard.html
@@ -22,8 +22,8 @@
 
 <br>
 <br>
-<input type="reset" value="リセット">
-<input type="submit" value="作成">
+<input type="reset" class="button" id="reset" value="リセット">
+<input type="submit" class="button" value="作成">
 <br>
 
 
