--- a/src/main/resources/templates/useTest.html
+++ b/src/main/resources/templates/useTest.html
@@ -23,13 +23,24 @@
 <p>選択肢</p>
 <div  class="option">
 <input type="radio" name="option" value="none" style="display:none;" checked>
+<label>
 <input type="radio" name="option" value="a"><span th:text="${option_a}"></span>
+</label>
 <br>
+
+<label>
 <input type="radio" name="option" value="b"><span th:text="${option_b}"></span>
+</label>
 <br>
+
+<label>
 <input type="radio" name="option" value="c"><span th:text="${option_c}"></span>
+</label>
 <br>
+
+<label>
 <input type="radio" name="option" value="d"><span th:text="${option_d}"></span>
+</label>
 </div>
 </div>
 <br>
