--- a/src/main/resources/static/css/addFlashcard.css
+++ b/src/main/resources/static/css/addFlashcard.css
@@ -1,42 +1,52 @@
 @charset "UTF-8";
 
+
 body {
-	margin:0;
+	margin: 0; /*メニューバーの枠調整*/
 	text-align: center;
-	background:#f0fff0;
-	font-size:15px;
-
+	background: #f0fff0;
+	font-size: 15px;
 }
 
+/*問題出力*/
 #question {
-	resize: none; width : 400px;
+	resize: none;
+	width: 400px;
 	height: 100px;
-	width: 400px; height : 100px;
+	width: 400px;
+	height: 100px;
 	font-size: 15px;
 }
 
+
+/*回答出力*/
 #answer {
-	resize: none; width : 400px;
+	resize: none;
+	width: 400px;
 	height: 100px;
-	width: 400px; height : 100px;
+	width: 400px;
+	height: 100px;
 	font-size: 15px;
 }
 
+/*解説出力*/
 #explanation {
-	resize: none; width : 400px;
+	resize: none;
+	width: 400px;
 	height: 100px;
-	width: 400px; height : 100px;
+	width: 400px;
+	height: 100px;
 	font-size: 15px;
 }
 
-#end{ /*終了ボタン*/
-    position: relative;
-    float: right;
-    right: 10%;
-}
 
-.button{
-	background-color:rgb(157, 211, 255);
+
+#end { /*終了ボタン*/
+	position: relative;
+	float: right;
+	right: 10%;
+	text-decoration:none;
+  background-color:#326c9c;
   position: relative;
   display: inline-block;
   padding: 8px 17px;
@@ -45,6 +55,37 @@ body {
   text-align: center;
   vertical-align: middle;
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: #fff;
   border-radius: 0.5rem;
+}
+
+/*記入リセットボタン*/
+#reset {
+	background-color: #b9ffbb;
+	position: relative;
+	display: inline-block;
+	padding: 8px 17px;
+	cursor: pointer;
+	transition: all 0.3s;
+	text-align: center;
+	vertical-align: middle;
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	border-radius: 0.5rem;
+}
+
+
+/*作成ボタン*/
+.button {
+	background-color: rgb(157, 211, 255);
+	position: relative;
+	display: inline-block;
+	padding: 8px 17px;
+	cursor: pointer;
+	transition: all 0.3s;
+	text-align: center;
+	vertical-align: middle;
+	text-decoration: none;
+	color: rgb(0, 0, 0);
+	border-radius: 0.5rem;
 }
