--- a/src/main/resources/static/css/flashcard.css
+++ b/src/main/resources/static/css/flashcard.css
@@ -1,18 +1,20 @@
 @charset "UTF-8";
 
 body {
-	margin:0;
+	margin:0;/*メニューバーの枠調整*/
 	text-align: center;
 	background:#f0fff0;
 	font-size:15px;
 
 }
 
+/*URLに何もしないとき*/
 .url {
 	font-size: 20px;
 	text-decoration: none
 }
 
+/*選択肢にマウスを当てた時の線*/
 .url::after {
 	border-bottom: solid 2px rgb(128, 128, 255);
 	bottom: 0;
