--- a/src/main/resources/static/css/useFlashcard.css
+++ b/src/main/resources/static/css/useFlashcard.css
@@ -42,10 +42,26 @@ body {
 
 #next{
 	text-decoration:none;
+  background-color:#326c9c;
+  position: relative;
+  display: inline-block;
+  padding: 8px 17px;
+  cursor: pointer;
+  transition: all 0.3s;
+  text-align: center;
+  vertical-align: middle;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 0.5rem;
 }
 
+
+
+
+
+
 .button{
-	background-color:rgb(157, 211, 255);
+background-color:rgb(157, 211, 255);
   position: relative;
   display: inline-block;
   padding: 8px 17px;
@@ -57,3 +73,4 @@ body {
   color: rgb(0, 0, 0);
   border-radius: 0.5rem;
 }
+
