--- a/src/main/resources/templates/comment.html
+++ b/src/main/resources/templates/comment.html
@@ -10,7 +10,7 @@
 
 <span th:replace="menu"></span>
 
-<h1>★みんなのレビュー★</h1>
+<h1>★<span th:text="'『'+${name}+'(' + ${price}+ '円)』'"></span>のみんなのレビュー★</h1>
 
 <div th:text="${mess}"></div>
 
