--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -14,8 +14,7 @@ body {
 
 /*「基本情報技術者試験」*/
 h1 {
-	font-size:40px;
-
+	font-size: 40px;
 }
 
 /*URL移動画像のサイズ設定*/
@@ -27,24 +26,28 @@ h1 {
 	float: left;
 }
 
+/*画像大きさ*/
 img {
 	width: 300px;
 	height: 300px;
 }
 
-.text{
-    margin:0;
-    color: #2c2c2f;
-    background: #cde4ff;
-    border-top: solid 5px #5989cf;
-    border-bottom: solid 5px #5989cf;
-
+/*画像下の文字*/
+.text {
+	margin: 0;
+	color: #2c2c2f;
+	background: #cde4ff;
+	border-top: solid 5px #5989cf;
+	border-bottom: solid 5px #5989cf;
 }
 
-a{
-	text-decoration:none;
+/*aタグライン消去*/
+a {
+	text-decoration: none;
 }
+
+/*aタグ下の文字位置*/
 .text p {
-    margin: 0;
-    padding-bottom: 20px;
+	margin: 0;
+	padding-bottom: 20px;
 }
