--- a/src/main/resources/static/css/test.css
+++ b/src/main/resources/static/css/test.css
@@ -8,12 +8,13 @@ body {
 
 }
 
-
+/*メニューバーのフォントサイズ*/
 .test {
 	font-size: 20px;
 	text-decoration: none
 }
 
+/*メニューバー選択時に線を引く設定*/
 .test::after {
 	border-bottom: solid 2px rgb(128, 128, 255);
 	bottom: 0;
@@ -24,6 +25,7 @@ body {
 	width: 0;
 }
 
+/*カーソルを当てた時の動作*/
 .test:hover::after {
 	width: 100%;
 }
